load("@rules_rust//rust:defs.bzl", "rust_library", "rust_shared_library")

package(default_visibility = ["//visibility:public"])

# Rust library for other Rust crates to depend on
rust_library(
    name = "twitter_text_ffi",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    deps = [
        "//rust/twitter-text:twitter_text_rlib",
    ],
    edition = "2021",
)

# Shared library for C/C++ to link against
rust_shared_library(
    name = "twitter_text_ffi_cdylib",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    deps = [
        "//rust/twitter-text:twitter_text_rlib",
    ],
    edition = "2021",
)

filegroup(
    name = "modifier_headers",
    srcs = ["include/twitter_text_modifiers.h"],
)
