[package]
name = "twitter_text_parser"
version = "0.2.0"
authors = ["Robert Sayre <sayrer@gmail.com>"]
readme = "README.md"
description = "Parser for twitter-text in Rust."
license = "Apache-2.0"
repository = "https://github.com/sayrer/twitter-text"
edition = "2018"

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"

[lib]
doctest = false
test = false
