# BuildBuddy remote execution platform with custom Docker image
platform(
    name = "linux_remote",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "dockerNetwork": "off",
        "container-image": "docker://gcr.io/terraform-prod-5633e672/twitter-text-build:latest",
    },
)
