# BuildBuddy remote execution platform with custom Docker image
platform(
    name = "linux_remote",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "dockerNetwork": "off",
        "container-image": "docker://ghcr.io/sayrer/twitter-text-build@sha256:5af27112f67cf17164eb8f762328df9777faf026bf80aa3c8002282eb0aa95a9",
    },
)
