load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

swift_binary(
    name = "swift_benchmark",
    srcs = ["main.swift"],

    target_compatible_with = ["@platforms//os:macos"],
    deps = [
        "//rust/swift-bindings:TwitterText",
        "@yams//:Yams",
    ],
)

sh_binary(
    name = "benchmark",
    srcs = ["run_benchmark.sh"],
    data = [
        ":swift_benchmark",
        "//benchmark/data:autolink.yml",
        "//benchmark/data:extract.yml",
        "//benchmark/data:validate.yml",
        "//benchmark/data:parse.yml",
    ],
    target_compatible_with = ["@platforms//os:macos"],
)
