package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "twitter_text_config",
    srcs = [
        "src/lib.rs",
    ],
    data = [
        "src/v1.json",
        "src/v2.json",
        "src/v3.json",
    ],
    deps = [
        "//rust_bindings/cargo:lazy_static",
        "//rust_bindings/cargo:serde",
        "//rust_bindings/cargo:serde_json",
    ],
    edition = "2018",
    proc_macro_deps = [
        "//rust_bindings/cargo:serde_derive",
    ],
)