package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "twitter_text_config",
    srcs = [
        "src/lib.rs",
    ],
    compile_data = [
        "src/v1.json",
        "src/v2.json",
        "src/v3.json",
    ],
    deps = [
        "//rust_bindings/3rdparty/crates:lazy_static",
        "//rust_bindings/3rdparty/crates:serde",
        "//rust_bindings/3rdparty/crates:serde_json",
    ],
    edition = "2018",
    proc_macro_deps = [
        "//rust_bindings/3rdparty/crates:serde_derive",
    ],
)
