[package]
name = "twitter_text_config"
version = "0.2.0"
authors = ["Robert Sayre <sayrer@gmail.com>"]
readme = "README.md"
description = "Configuration for twitter-text in Rust."
license = "Apache-2.0"
repository = "https://github.com/sayrer/twitter-text"
edition = "2018"

[dependencies]
lazy_static = "1.1.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.45"